package locations;

public enum Places {
    Mountains,
    Airplane,
    Mine,
    AbstractWorld

}
